# 06-crm

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  _typos.toml  cliff.toml
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs  crm.yml
crm-metadata/: Cargo.toml  build.rs  metadata.yml
crm-metadata/src/: config.rs  lib.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs
crm-metadata/tests/: service.rs
crm-send/: Cargo.toml  build.rs  send.yml
crm-send/src/: config.rs  lib.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: notification.rs
crm-send/tests/: service.rs
crm/src/: client.rs  config.rs  lib.rs  main.rs  server.rs
crm/src/abi/: auth.rs  crm.rs  mod.rs
crm/src/pb/: crm.rs
docs/: recall_remind.md
fixtures/: cert.pem  key.pem  rootCA.pem  token
protos/: crm.proto
protos/crm/: rpc.proto
protos/metadata/: messages.proto
protos/notification/: messages.proto  rpc.proto
protos/user-stats/: messages.proto
user-sate/: Cargo.toml  app.yml
user-sate/examples/: gen.rs
user-sate/migrations/: 20240702140229_init.sql
user-sate/src/: config.rs
user-stat/: Cargo.toml  build.rs  user_stat.yml
user-stat/examples/: gen.rs
user-stat/fixtures/: data.sql
user-stat/migrations/: 20240702140229_init.sql
user-stat/src/: config.rs  lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: user_stats.rs
user-stat/tests/: service.rs
