[package]
name = "crm"
version = "0.1.0"
authors = ["kailan yue <yuekailan@gmail.com>"]
edition = "2021"
description = ""
documentation = ""
keywords = ["", ""]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kailanyue/06-crm"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }


[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }
