[package]
name = "crm"
version = "0.1.0"
authors = ["kailan yue <yuekailan@gmail.com>"]
edition = "2021"
description = ""
documentation = ""
keywords = ["", ""]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kailanyue/06-crm"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
crm-metadata = { workspace = true }
crm-send = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
jwt-simple = { version = "0.12.9", default-features = false, features = [
    "pure-rust",
] }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
user-stat = { workspace = true }
uuid = { version = "1.10.0", features = ["v4"] }

[build-dependencies]
anyhow = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }
